cmake_minimum_required(VERSION 3.26)
project(CPP_Sem2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(CPP_Sem2
        zad11/zad11.cpp
        #zad6/zad_6.cpp
        #powtorka/zad1.cpp
        #powtorka/zad2.cpp
        #other/array.cpp
        #zad7/zad_7.cpp
        #zad9/zad9.cpp
        #zad10/zad10.cpp
)
